<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/feed_dialog_item_height"
        android:gravity="center"
        android:text="@string/feed_whether_delet_comment"
        android:textSize="@dimen/text_size_five" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_item_line_height"
        android:background="@color/search_top_alpha_color" />

    <Button
        android:id="@+id/feed_delet_comment_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feed_dialog_item_height"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/photograph_delete"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/text_size_five" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_item_line_height"
        android:background="@color/search_top_alpha_color" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feed_dialog_item_height"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/feed_bule"
        android:textSize="@dimen/text_size_five" />

</LinearLayout>